Prevent layout shift when enhanced measurement status loads on Analytics settings edit screen.

--- a/assets/sass/components/settings/_googlesitekit-settings-group.scss
+++ b/assets/sass/components/settings/_googlesitekit-settings-group.scss
@@ -38,5 +38,9 @@
 			font-size: $fs-label-sm;
 			margin: 6px 0 0 42px; // margin-left = 32px switch width + 10px margin-left of label.
 		}
+
+		.googlesitekit-analytics-enable-enhanced-measurement__progress--settings-edit {
+			margin-bottom: 14px;
+		}
 	}
 }
